Prepare for Supabase-based backend deployment

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,6 +2,13 @@
 VITE_SUPABASE_URL=https://your-supabase-url.supabase.co
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 
-# API Configuration
-VITE_API_URL=http://localhost:8000 # Local development
-# VITE_API_URL=https://your-api-endpoint.app # Production
+# API Configuration (Choose one approach)
+# For FastAPI backend
+VITE_API_URL=http://localhost:8000
+
+# Backend Mode (uncomment to use Supabase Edge Functions or direct DB access)
+# VITE_USE_EDGE_FUNCTIONS=true
+# VITE_USE_SUPABASE_DIRECT=true
+
+# OpenAI Configuration (for Edge Functions)
+# VITE_OPENAI_API_KEY=your-openai-key
