Fix supabase_client implementation and backend server issues
- Add missing get_supabase_client() function to return the singleton instance
- Enhance mock implementation with table methods for queries
- Update CLAUDE.md with backend server issues and solutions
- Update status.md with fixed langgraph and backend issues
- Update .gitignore to exclude output and egg files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.egg-info/
+*.egg
 
 # Virtual environment
 venv/
@@ -27,4 +29,17 @@ yarn-error.log*
 
 # Operating system files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Output files
+output/
+
+# Temporary files
+*.tmp
+*.bak
+.pytest_cache/
+
+# Coverage reports
+.coverage
+htmlcov/
+coverage/
