--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@sentry/react": "^9.13.0",
     "@sentry/vite-plugin": "^3.3.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/analytics": "^1.5.0",
     "chart.js": "^4.4.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
