--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,8 +3,10 @@ uvicorn==0.28.0
 python-dotenv==1.0.1
 pydantic>=2.0.0
 email-validator>=2.0.0
-supabase==2.3.0
-httpx>=0.24.0
+# Pin to a specific version of supabase that works with httpx 0.24.1
+supabase==1.2.0
+httpx==0.24.1
 python-multipart==0.0.9
 sentry-sdk==1.39.2
-langgraph>=0.0.30
+# Remove langgraph from API requirements to reduce dependencies
+# It can be imported from the main app which already has it installed
