--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@ uvicorn[standard]==0.28.0
 python-dotenv==1.0.1
 pydantic==2.6.0
 python-multipart==0.0.9
-httpx==0.27.0
 email-validator==2.1.0
 
-# Database and Storage
-supabase==2.3.0
+# Database and Storage - use version 1.2.0 which is compatible with httpx 0.24.1
+supabase==1.2.0
+httpx==0.24.1
 
-# LLM frameworks - only what's necessary for production
+# LLM frameworks
 langchain==0.1.5
-langgraph==0.0.30
+langgraph==0.0.30  # Using older stable version to reduce dependency conflicts
 
 # Monitoring and Error Tracking
 sentry-sdk==1.39.2
@@ -21,5 +21,4 @@ sentry-sdk==1.39.2
 openai==1.12.0
 langchain-openai==0.0.5
 
-# Version specification for Vercel
-# Note: Do not use python-x.x here as it's not supported by Vercel
+# Note: Do not change these versions unless you've verified compatibility
