--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://interview-ccwoqo9hs-uplabs1.vercel.app/api/:path*" },
+    { "source": "/api/:path*", "destination": "https://interview-bot-gamma.vercel.app/api/:path*" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "buildCommand": "npm install && npm run build",
