--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://interview-bot-api.vercel.app/api/:path*" },
-    { "source": "/health", "destination": "https://interview-bot-api.vercel.app/health" },
+    { "source": "/api/:path*", "destination": "/api/proxy/:path*" },
+    { "source": "/health", "destination": "/api/proxy/health" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "buildCommand": "npm install && npm run build",
