--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,11 @@
     "@sentry/vite-plugin": "^3.3.1",
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/node": "^3.0.25",
     "chart.js": "^4.4.9",
+    "formdata-node": "^5.0.1",
+    "formidable": "^3.5.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
