--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/upload", "destination": "/api/proxy/upload" },
     { "source": "/api/:path*", "destination": "/api/proxy/:path*" },
     { "source": "/health", "destination": "/api/proxy/health" },
     { "source": "/(.*)", "destination": "/index.html" }
